test/classes/figueroa/DestructorSubclassing2.good
DestructorSubclassing2.chpl:11: error: invalid use of multiple inheritance in class 'C'; only single inheritance is supported
